@@ -75,7 +75,7 @@ static int mask_pos;
 int
 get_channel_access(struct Client *source_p, struct membership *msptr)
 {
-	if(!MyClient(source_p) || is_chanop(msptr))
+	if(!MyClient(source_p) || is_chanop(msptr) || IsOperOverride(source_p))
 		return CHFL_CHANOP;
 
 	return CHFL_PEON;
@@ -721,8 +721,12 @@ chm_op(struct Client *source_p, struct Channel *chptr,
 
 	if(dir == MODE_ADD)
 	{
+		/*
+		 * This breaks oper-override users opping themselves.
+		 * Presumably a reason though?
 		if(targ_p == source_p)
 			return;
+		 */
 
 		mode_changes[mode_count].letter = c;
 		mode_changes[mode_count].dir = MODE_ADD;
